--- a/package.json
+++ b/package.json
@@ -40,6 +40,9 @@
       "last 1 safari version"
     ]
   },
+  "devDependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.1.0"
+  },
   "description": "This project was bootstrapped with [Create React App](https://github.com/facebook/create-react-app).",
   "main": "index.js",
   "keywords": [],
